# rs-kvpairs2rbat

./: Cargo.toml  README.md  doc-web.sh
examples/fs2kvpairs2rbat/: Cargo.toml  fs2kvpairs2rbat  run.sh
examples/fs2kvpairs2rbat/sample.d/bkt0.d/: key0.txt  key1.txt
examples/fs2kvpairs2rbat/sample.d/bkt1.d/: key0.txt  key1.txt
examples/fs2kvpairs2rbat/sample.d/bkt2.d/: key0.txt  key1.txt
examples/fs2kvpairs2rbat/src/: main.rs
src/: core.rs  kvstore.rs  lib.rs
src/kvstore/fs/: kvs.rs
