[package]
name = "rs-kvpairs2rbat"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies.futures]
version = "0"
default-features = false
features = [
	"async-await",
	"executor",
	"std",
]

[dependencies.async-trait]
version = "0"
default-features = false
features = [
]

[dependencies.arrow]
version = "55"
default-features = false
features = [
]

[dependencies.tokio]
version = "1"
optional = true
default-features = false
features = [
	"fs",
	"io-util",
]

[dependencies.tokio-stream]
version = "0"
optional = true
default-features = false
features = [
	"fs",
]

[features]
default = [
	"kvs_fs",
]

kvs_fs = [
	"tokio",
	"tokio-stream",
]
